P4ADEV-3023 fix test